# atlas

./: .gitignore  AGENTS.md  PHASE2-SPEC.md  README.md  ROADMAP.md  SPEC.md  app.config.ts  eas.json  package.json  pnpm-lock.yaml
app/: _layout.tsx  index.tsx  unreachable.tsx
assets/: _generate_icon.py
docker/: docker-compose.yml
docker/notifier/: .dockerignore  .env.example  Dockerfile  backoff.py  config.py  conftest.py  health.py  idempotency.py  main.py  ntfy_client.py  openwebui_client.py  pyproject.toml
docker/notifier/tests/: README.md  conftest.py  smoke_mock.py  test_backoff.py  test_health.py  test_idempotency.py  test_main.py  test_ntfy_client.py  test_openwebui_client.py
docker/ntfy/: README.md  issue_token.py  pyproject.toml  server.yml
docs/: decisions.md
src/components/: CompletionBanner.tsx  CompletionDevTrigger.tsx  VpnBanner.tsx
src/copy/: strings.ts
src/notifications/: bannerController.ts  bannerGating.ts  openWebUiCompletion.ts
src/reachability/: probe.ts  store.ts  useReachability.ts
src/webview/: ChatWebView.tsx  messageBridge.ts
tests/: bannerController.test.ts  openWebUiCompletion.test.ts
