[project]
name = "atlas-notifier"
version = "0.1.0"
description = "Atlas Phase 2 notifier: Open WebUI -> NTFY bridge"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "websockets>=12",
    "pydantic>=2.6",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "freezegun>=1.4",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v --tb=short"
testpaths = ["tests"]
