[project]
name = "atlas-ntfy-bootstrap"
version = "0.1.0"
description = "Idempotent NTFY token bootstrap for the Atlas self-host stack. Run by hand on first install."
requires-python = ">=3.11"
# The script is stdlib-only at runtime: argparse, subprocess, getpass,
# sqlite3 (via the sqlite3 CLI inside the ntfy container), secrets.
# We pin no runtime deps to keep the install path trivial and the
# `uv run --with` invocation short.
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
